# gz_drone

./: CMakeLists.txt  README.md  drone_model.sdf  drone_world.sdf  lidar_control.cpp  lidar_node.cc  move_drone.py  my_quadcopter.sdf  my_quadcopter_lidar.sdf  notes.md  quadcopter_world.sdf  room_escape.py
DELETE/: last.cpp  lidar_control.cpp  my_quadcopter_lidar.sdf
DELETE/backups/: quadcopter_hover.cpp
backups/: CMakeLists_for_hover.txt  backup.cpp
scripts/: dronemovement.cpp  dronemovement.hpp  pokus.cpp
x3/: model.sdf
